# fix_vscode_server

./: README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yaml
fix_vscode_server/: __init__.py  cli.py
