[tool.black]
line-length = 88

[tool.poetry]
name = "fix_vscode_server"
description = "Fix VSCode server on NixOS."
authors = ["Alex Martens <alex@thinglab.org>"]
version = "0.1.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/newAM/fix_vscode_server"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
fix_vscode_server = "fix_vscode_server.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
